# Glucoo

./: .gitignore  API.c  API.h  CMakeLists.txt  README.md  RH_Dummy.c  RH_Font.c  RH_Font.h  RH_GUI.c  RH_GUI.h  RH_GUIConfig.h  RH_GUIConfigCheck.h  RH_Utility.c  RH_Utility.h  RH_color.h  RH_common.c  RH_common.h  RH_config.h  RH_lib.c  RH_lib.h  future.c  glucoo  main.c
.MDK_nxprt1052/IAR/: YH-RT1052.ewp
.MDK_nxprt1052/MDK/: YH-RT1052.uvguix.flyleaf  YH-RT1052.uvoptx  YH-RT1052.uvprojx
.MDK_nxprt1052/User/: main.c
.MDK_stm32f103/: README.md
.MDK_stm32f103/BSP/: beeper.c  beeper.h  led.h  ssd1306.h
.MDK_stm32f103/MDK/: Project.uvguix.Randle_H
.MDK_stm32f103/self/: RH_config.h  RH_dummy.c
.MDK_stm32f407/MDK/: Project.axf  Project.build_log.htm  Project.hex  Project.htm  Project.lnp  Project.map  Project.uvprojx  Project_RandleH.dep
.Xcode12/Glucoo.xcodeproj/: project.pbxproj
BSP/: ssd1306.h
BlackHouse/: RH_assert.h  RH_color.h  RH_common.h  RH_config.h  RH_data.c  RH_data.h  RH_dsp.c  RH_dsp.h  RH_dummy.c  RH_font.h  RH_graphic.c  RH_graphic.h  RH_image.c  RH_image.h  RH_lib.c  RH_lib.h  RH_math.c  RH_math.h  RH_neuron.c  RH_neuron.h  RH_time.c  RH_utility.c  RH_utility.h
CMake/: CMakeLists.txt  main.c
DEV_C++ 5.11/: DEV_C++ 5.11.dev  DEV_C++ 5.11.layout  Makefile.win  main.c
GCC/: cmd.txt  main  main.c
Glucoo/: RH_gui.c  RH_gui.h  RH_gui_api.c  RH_gui_api.h  RH_gui_config.h  RH_gui_font.c  RH_gui_font.h
Glucoo/Font/: Courier New Italic  RH_font.c  RH_font.h  RH_font_ArialRoundedBold.c  RH_font_CourierNew.c  RH_font_CourierNewBold.c
Glucoo/STB/: stb_truetype.h
Libraries/Glucoo/: RH_gui.c  RH_gui.h  RH_gui_api.c  RH_gui_api.h
MDK/: JLinkLog.txt  Project.uvguix.Randle_H  Project.uvoptx  Project.uvprojx
MDK/List/: Project.map  startup_stm32f10x_hd.lst
RUN_nxpimxrt1052/IAR/: YH-RT1052.dep  YH-RT1052.ewp  YH-RT1052.ewt
RUN_nxpimxrt1052/MDK/: YH-RT1052.uvguix.Randle_H  YH-RT1052.uvoptx  YH-RT1052.uvprojx
RUN_nxpimxrt1052/User/: main.c
RUN_nxpimxrt1052/self/: RH_common.h  RH_config.h  RH_dummy.c  RH_gui_api.c
RUN_stm32f103c8t6/BSP/: joystick.c  joystick.h  led.c  ssd1306.c
RUN_stm32f103c8t6/MDK/: JLinkLog.txt  Project.uvguix.Randle_H  Project.uvoptx  Project.uvprojx
RUN_stm32f103c8t6/User/: main.c
RUN_stm32f103c8t6/self/: GLU_api.c  RH_common.h  RH_config.h  RH_dummy.c  RH_gui_api.c  RH_gui_api.h
RUN_stm32f407rct6/MDK/: Project.uvguix.Randle_H  Project.uvoptx
RUN_stm32f407rct6/User/: main.c
RUN_stm32f407rct6/self/: RH_common.h  RH_config.h  RH_gui_api.c  RH_gui_api.h
RUN_stm32f407zgt6/: RH_config.h
SIM_macOS-deprecated/Eclipse_2019/: .cproject  .project
SIM_macOS-deprecated/self/: RH_dummy.c
SIM_macOS/CMake/: CMakeCache.txt  CMakeLists.txt  Glucoo  Makefile  cmake_install.cmake
SIM_macOS/self/: GLU_api.c  GLU_api.h  RH_common.h  RH_config.h  RH_dummy.c  RH_gui_api.c  main.c
SIM_windows/: Makefile.win
SIM_windows-deprecated/: DevC++6.5.dev  DevC++6.5.layout
SIM_windows-deprecated/CMake/: CMakeLists.txt
SIM_windows/CMake/: CMakeCache.txt  Makefile  cmake_install.cmake
SIM_windows/self/: GLU_api.c  RH_config.h  RH_dummy.c  RH_gui_api.c  main.c
User/: main.c
User/inc/: delay.h
User/src/: delay.c
XCode_11.1/XCode_11.1/: main.c
XCode_11.1/XCode_11.1.xcodeproj/: project.pbxproj
XCode_12.4/XCode_12.4/: main.c
XCode_12.4/XCode_12.4.xcodeproj/: project.pbxproj
Xcode_11/Xcode_11/: main.c
Xcode_11/Xcode_11.xcodeproj/: project.pbxproj
Xcode_12/Xcode_12/: main.c
Xcode_12/Xcode_12.xcodeproj/: project.pbxproj
core/: RH_color.h  RH_common  RH_common.c  RH_common.h  RH_gui.c  RH_gui.h  RH_gui_config.h
core/BlackHouse/: BLK_data.c  BLK_data.h  BLK_dsp.c  BLK_dsp.h  BLK_graphic.c  BLK_graphic.h  BLK_image.c  BLK_image.h  BLK_lib.c  BLK_lib.h  BLK_math.c  BLK_math.h  BLK_neuron.c  BLK_personal.h  BLK_poker.c  BLK_poker.h  BLK_time.c  BLK_time.h  RH_color.h  RH_data.c  RH_data.h  RH_dsp.c  RH_graphic.c  RH_graphic.h  RH_image.c  RH_image.h  RH_lib.c  RH_lib.h  RH_math.c  RH_math.h  RH_neuron.h  RH_time.c  RH_time.h  RH_utility.c
core/Font/: RH_font.c  RH_font.h  RH_font_CourierNewBold.c
(+186 files in other folders)
